--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.5.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
