--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
