--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -18,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-session-api": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
