--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
