--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-project",
   "version": "0.1.0",
+  "homepage": "https://tabynci.github.io/CostOfLivingAndExpenses",
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.13.1",
@@ -12,6 +13,7 @@
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "gh-pages": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -25,12 +27,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://localhost:3005/",
+  "proxy": "https://3.252.193.112:3005/",
   "eslintConfig": {
     "extends": [
       "react-app",
