--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-bootstrap": "^2.5.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
@@ -34,7 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://3.252.193.112:3005/",
+  "proxy": "https://localhost:3005/",
   "eslintConfig": {
     "extends": [
       "react-app",
